Added initial webtile

--- a/Band.WebAPI/Band.WebAPI.csproj
+++ b/Band.WebAPI/Band.WebAPI.csproj
@@ -154,6 +154,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="buttonband.webtile" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
