Make webtile available as content

--- a/Band.WebAPI/Band.WebAPI.csproj
+++ b/Band.WebAPI/Band.WebAPI.csproj
@@ -154,7 +154,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="buttonband.webtile" />
+    <Content Include="buttonband.webtile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
