--- a/Band.WebAPI/Web.config
+++ b/Band.WebAPI/Web.config
@@ -50,5 +50,10 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+
+    <staticContent>
+      <mimeMap fileExtension=".webtile" mimeType="application/octet-stream" />
+    </staticContent>
+    </system.webServer>
 </configuration>
