Added device emulator project, webjob project, and device manager project.  Many of these have connection string values that will need to be added back in.  Also added a Post to BandCountController which increments color counts.

--- a/Band.WebAPI/Band.WebAPI.csproj
+++ b/Band.WebAPI/Band.WebAPI.csproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BandCountMessage.cs" />
     <Compile Include="Controllers\ButtonCountsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -158,6 +159,7 @@
     <Content Include="buttonband.webtile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Properties\webjobs-list.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -205,6 +207,7 @@
     <PreBuildEvent>del  /Q "$(ProjectDir)\buttonband.webtile"
 "$(SolutionDir)\7za" -tZIP a "$(ProjectDir)\buttonband.webtile" "$(SolutionDir).\Webtile\*"</PreBuildEvent>
   </PropertyGroup>
+  <Import Project="..\packages\Microsoft.Web.WebJobs.Publish.1.0.9\tools\webjobs.targets" Condition="Exists('..\packages\Microsoft.Web.WebJobs.Publish.1.0.9\tools\webjobs.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
