--- a/Band.App/project.json
+++ b/Band.App/project.json
@@ -1,8 +1,9 @@
 ﻿{
   "dependencies": {
-    "Microsoft.ApplicationInsights": "1.0.0",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
+    "Microsoft.ApplicationInsights": "1.2.3",
+    "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
+    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
+    "Microsoft.Azure.Devices.Client": "1.0.2",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Windows-Remote-Arduino": "1.3.0"
   },
