--- a/Band.App/project.json
+++ b/Band.App/project.json
@@ -5,6 +5,7 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.Azure.Devices.Client": "1.0.2",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Newtonsoft.Json": "8.0.2",
     "Windows-Remote-Arduino": "1.3.0"
   },
   "frameworks": {
