Updated web tile

--- a/Band.WebAPI/Band.WebAPI.csproj
+++ b/Band.WebAPI/Band.WebAPI.csproj
@@ -160,6 +160,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Properties\webjobs-list.json" />
+    <None Include="Properties\PublishProfiles\ButtonBand - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
